<resources>
    <string name="app_name">Androiders</string>

    <string name="navigation_open"> Open Navigation drawer</string>
    <string name="navigation_close"> Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">• <b>Services</b> − It will be used to perform background functionalities.\n</string>
    <string name="activties">• <b>Activities</b> - It is a single screen that represents GUI(Graphical User Interface) with which users can interact.\n</string>
    <string name="broadcasts">• <b>Broadcast receivers</b> - Broadcast receiver is a mechanism used for listening to system-level events like listening for incoming calls, SMS, etc.\n</string>
    <string name="providers">• <b>Content providers</b> − This will share the data between various applications.</string>
    <string name="lifecycle">• <b>OnCreate():</b> Activity is created.\n\n• <b>OnStart():</b> Activity is becoming visible to the user.\n\n• <b>OnResume():</b> Activity will start an interaction with the user.\n\n• <b>OnPause():</b> Activity is moving to the background but hasn’t been killed yet.\n\n• <b>OnStop():</b> This is called when an activity is no longer visible to the user.\n\n• <b>OnDestroy():</b> Activity is finished or destroyed.\n\n• <b>OnRestart():</b> Activity has been stopped, prior to it being started again.</string>
    <string name="files">• <b>XML File: </b>Android applications use XML to create layout files.\n\n• <b>Java: </b>The code inside java file generally contains the logical parts of the application. Java can also be used as a backend language in android studio.\n\n• <b>Manifest: </b>The manifest file provides essential information about your app to the Android operating system, and Google Play store. The Android manifest file helps to declare the permissions that an app must have to access data from other apps.\n\n• <b>Gradle Scripts: </b>Code in this file is used to configure the build process for that specific module. The file consists of a series of blocks that are used to configure different aspects of the build process, such as the build tools to use, the dependencies for the app, and other settings.</string>
    <string name="advantages">• <b>Open source: </b>It means no license, development, and distribution fee.\n\n• <b>Platform independent: </b>Android applications can be developed on any operating system with the help of Android studio and Android SDK.\n\n• <b>Highly optimized virtual machine: </b>Android uses a highly optimized virtual machine DVM (Dalvik Virtual Machine) for mobile devices.\n\n• <b>Installation flexibility: </b>You can download millions of apps from Google Play store as well as any other alternative stores</string>
</resources>